# langgraph-sql-agent

./: INFOGRAPHIC_GUIDE.md  README.md  README_gradio.md  debug_sql_agent.py  main.py  pyproject.toml  run_gradio_chat.py  test_infographic.py
docker_compose_ollama_mysql/: docker-compose.md  docker-compose.yml
docker_compose_ollama_pgvector/: docker-compose.md  docker-compose.yml
src/: debug_infographic_issue.py  final_test_infographic.py  sql_agent.ipynb  sql_agent_infographics.py  sql_agent_simple_hybrid.py  sql_agent_simple_infographics.py  test_decimal_parsing.py
src/db_sample/: Dump20251013_schema.sql  sakila_schema_data.sql
src/infographics/: dashboard_20251020_171903.html
src/sql_agent_gradio_chat/: sql_agent_gradio_chat.py  sql_agent_simple_hybrid.py
src/sql_agent_infographics/infographics/: dashboard_20251014_140434.html
src/sql_agent_simple_infographics/: sql_agent_simple_infographics.md
